implementação de changepassword

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -180,6 +180,7 @@ pt-BR:
         view_comprovante: Visualizar comprovante
         horas_aceitas: Horas aceitas
         avaliada: Avaliada
+        explanation: Justificativa
       avaliador:
         nome: Nome
         matricula: Matricula
