--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -66,6 +66,7 @@ pt-BR:
     changeimage:
       image_updated: Sua imagem de perfil foi atualizada
     changepassword:
+      edit: Altere sua senha
       password_updated: Sua senha foi atualizada
     menu:
       links:
