Alterações na interface e Validações em Modalidade

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -123,6 +123,7 @@ pt-BR:
     edit: Editar
     show: Exibir
     destroy: Apagar conta
+    destroyModel: Apagar modalidade
     status: Editar Status
     forgotten_your_password: Esqueceu sua senha
     send: Enviar
