Alterações do commit anterior que não tinha ido agora com as fontes externas

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -25,6 +25,7 @@ pt-BR:
       edit: Editar
       modalidade: Modalidade
       horasganhas: Horas
+      noexplanation: Sem Justificativa
   avaliadores:
     index:
       logout: Sair
