--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -246,5 +246,6 @@ pt-BR:
         password: Senha
         password_confirmation: Confirme sua senha
         current_password: Senha atual
+        remember_me: Manter conectado
       modalidade:
         title: Descrição
