^^ Ajuste no metodo live search para exibir resultados não encontrados ^^

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -171,6 +171,7 @@ pt-BR:
     accesserror: Sem Atividades para serem avaliadas
     neither: Nenhuma
     without_students: Sem Alunos
+    no_match: "Sem resultados para %{live_search}"
   uploader:
     update_image: Atualizar Imagem
     remove_image: Remover Imagem
