--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -172,6 +172,7 @@ pt-BR:
     neither: Nenhuma
     without_students: Sem Alunos
     no_match: "Sem resultados para %{live_search}"
+    success_comparison: "Resultados para %{live_search}"
   uploader:
     update_image: Atualizar Imagem
     remove_image: Remover Imagem
