^^ troca do nome live_search por admin_live_search ^^

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,5 +1,13 @@
 # encoding: UTF-8
 # pt-BR translations
+
+# OBS:
+# NESTE ARQUIVO SE ENCONTRAM TODAS AS TRADUÇÕES
+# OFICIAIS DE ATIVIDADES COMPLEMENTARES O SISTEMA
+# PROPRIAMENTE DITO. QUALQUER MODIFICAÇÃO DEVE SER 
+# FEITA NESSE ARQUIVO E NÃO NOS MODELOS.
+
+
 pt-BR:
   modalidades:
     new:
