^^ Ajustes Finais p4 -- ajuste da tabela modalidades ^^

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -161,7 +161,7 @@ pt-BR:
     edit: Editar
     show: Exibir
     destroy: Apagar conta
-    destroyModel: Apagar modalidade
+    destroyModel: Apagar
     destroyActivitie: Excluir
     status: Editar Status
     forgotten_your_password: Esqueceu sua senha
