--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -260,4 +260,4 @@ pt-BR:
         current_password: Senha atual
         remember_me: Manter conectado
       modalidade:
-        title: Descrição
+        title: Título
